--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,6 +14,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100;400;500;700&family=Mooli&family=Nunito&display=swap"
       rel="stylesheet"
     />
+    <link href="/dist/output.css" rel="stylesheet" />
   </head>
   <body>
     <div id="root"></div>
